[package]
name = "rust-shortener-cqrs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
dashmap = "6.1.0"
http-body-util = "0.1.3"
mime = "0.3.17"
nanoid = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
